# vatavaran

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  graders.py  inference.py  log_conversation.json  models.py  openenv.yaml  pyproject.toml  vatavaran.yaml
baseline/: inference.py
openrca_env/: __init__.py  client.py  models.py
openrca_env/data/: prepare_data.py  tasks.json
openrca_env/data/telemetry/Bank/2021_03_05/metric/: metric_app.csv
openrca_env/data/telemetry/Bank/2021_03_05/trace/: trace_span.csv
openrca_env/data/telemetry/Bank/2021_03_06/log/: log_service.csv
openrca_env/data/telemetry/Bank/2021_03_06/metric/: metric_app.csv  metric_container.csv
openrca_env/data/telemetry/Bank/2021_03_07/log/: log_service.csv
openrca_env/data/telemetry/Bank/2021_03_07/metric/: metric_app.csv  metric_container.csv
openrca_env/data/telemetry/Bank/2021_03_07/trace/: trace_span.csv
openrca_env/server/: domain_knowledge.py  evaluator.py  rca_environment.py  reward_engine.py
scripts/: filter_bank_by_telemetry_day.py
server/: Dockerfile  app.py  baseline_runner.py  environment.py  graders.py  requirements.txt  simulation.py  tasks.py
vatavaran/: __init__.py  client.py  models.py
vatavaran/config/: env_config.yaml
vatavaran/data/telemetry/Bank/2021_03_05/log/: log_service.csv
vatavaran/data/telemetry/Bank/2021_03_05/metric/: metric_container.csv
vatavaran/data/telemetry/Bank/2021_03_06/trace/: trace_span.csv
vatavaran/server/: __init__.py  app.py  code_sandbox.py  rca_environment.py
